tests/rascal/negative/type_errors/L1/13_expression_ES10_D4_68.ob
MODULE Test13;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               z := ((((- 1223) MOD (2 - x)) + (- (y MOD 200))) - (+ ((x MOD z) * (200 + 2))));
               z := ((- (- (1 DIV 1))) * (((2 DIV 1223) DIV (y MOD 1)) DIV ((+ 1223) + (+ z))));
  (* error *)  q := (((- (r + z)) DIV (- (200 MOD 200))) # (((0 DIV 200) MOD (+ 0)) + ((200 MOD x) DIV (0 MOD 1))));
               y := ((((0 DIV 2) + (z DIV z)) * ((1 MOD 2) * (y DIV y))) * (- ((1 + 1223) * (0 - 1))));
               p := ((((y MOD 0) DIV (- 1223)) * ((+ 1) - (2 + 1223))) = (+ ((0 DIV 2) - (200 MOD z))));
               z := (+ (((1223 + 0) - (1 * 0)) + (+ (- z))));
               x := (((+ (+ 0)) DIV ((z MOD 2) * (- 2))) + (((- 0) DIV (2 MOD 0)) + ((200 + z) * (- 1))));
               x := ((((x - y) * (0 * 0)) * (+ (- z))) + (((- 2) DIV (- 0)) DIV ((x - z) - (1223 MOD 1223))));
               x := ((- ((x - 200) MOD (1223 * 1223))) MOD (- ((0 DIV 0) MOD (1223 - 2))));
               p := (((- (- 0)) MOD ((- 1) DIV (2 - y))) > (((x DIV 0) DIV (2 MOD 2)) * ((z DIV y) - (+ 2))))
END Test13.